<resources>
    <string name="app_name" translatable="false">KOCH</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in" translatable="false">SignInActivity</string>
    <string name="client">Client</string>
    <string name="service_provider">Service Provider</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="are">Are</string>
    <string name="you_new_visitor">"  you new visitor?"</string>
    <string name="sign_up">Sign up</string>
    <string name="register_free_now">Register free now</string>
    <string name="koch_app" translatable="false">KOCH</string>
    <string name="title_activity_sign_up" translatable="false">SignUpActivity</string>
    <string name="register_example">Registeration pattern</string>
    <string name="provider_name">Provider Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_phone_number">Enter(+ code) Phone Number</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="about_me">About me</string>
    <string name="short_description">Short description</string>
    <string name="work_hour">Work hour from - to</string>
    <string name="work_hour_number">Work hour number</string>
    <string name="services">Services</string>
    <string name="first_service">First Service</string>
    <string name="second_service">Second Service</string>
    <string name="third_service">Third Service</string>
    <string name="fourth_service">Fourth Service</string>
    <string name="other_service">Other Service</string>
    <string name="delivery_service">Delivery Service</string>
    <string name="there_is_delivery_service">There is delivery service</string>
    <string name="logo">Logo</string>
    <string name="enter_url_here">Enter Url here</string>
    <string name="repeat_password">Repeat password</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="title_activity_sign_up_client" translatable="false">SignUpClientActivity</string>
    <string name="upload_personal_picture">upload personal picture</string>
    <string name="title_activity_provider_profile" translatable="false">ProviderProfileActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_client_profile" translatable="false">ClientProfileActivity</string>
    <string name="title_activity_provider_home" translatable="false">ProviderHomeActivity</string>
    <string name="title_activity_client_home" translatable="false">ClientHomeActivity</string>
    <string name="about_koch">About KOCH</string>
    <string name="share_app">Share App</string>
    <string name="language">Language</string>
    <string name="call_us">Call Us!</string>
    <string name="info">Info</string>
    <string name="chats">Chats</string>
    <string name="sent_request">Sent requests</string>
    <string name="requests">Requestes</string>
    <string name="language_arabic">Arabic</string>
    <string name="language_en">English</string>
    <string name="title_activity_sender_profile" translatable="false">SenderProfileActivity</string>
    <string name="work_hours">"work hours / "</string>
    <string name="dilvary_service">"Drivary service / "</string>
    <string name="country">"Country / "</string>
    <string name="town">"Town / "</string>
    <string name="about_services">about services.?</string>
    <string name="about_us">about us.?</string>
    <string name="edit_my_data">Edit my data</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>
    <string name="see_service_providers">See service providers</string>
    <string name="your_location_detected">Your location detected by GPS</string>
    <string name="title_activity_conversation" translatable="false">ConversationActivity</string>
    <string name="send_request">Send Request</string>
    <string name="title_activity_request_detail" translatable="false">RequestDetailActivity</string>
    <string name="address">Title!</string>
    <string name="cost">Cost</string>
    <string name="details">Details</string>
    <string name="request_detail">Request detail</string>
    <string name="country1">Country</string>
    <string name="city">City</string>
    <string name="error">Error</string>
    <string name="password_not_equal">Passwod not similar to password confirmation</string>
    <string name="wait">Wait...</string>
    <string name="try_again">Try again</string>
    <string name="wrong_mail_or_password">Wrong mail or password</string>
    <string name="open_gps">Open GPS</string>
    <string name="why_open_gps">must active GPS to get your location</string>
    <string name="yes_open_gps">Yes, active</string>
    <string name="sign_out">Sign out</string>
    <string name="more_details">More details</string>
    <string name="follow_us">follow us on social</string>
    <string name="location">Location</string>
    <string name="confirmation_client_oreder">Confirmation Client Oreder</string>
    <string name="title_of_request">Title of request</string>
    <string name="details_of_request">Details of request</string>
    <string name="cost_of_request">Put Cost</string>
    <string name="discard">Discard</string>
    <string name="send">Send</string>
    <string name="title_activity_client_detail" translatable="false">ClientDetailActivity</string>
    <string name="yes">Yes there</string>
    <string name="no">No, there is no delievery</string>
    <string name="block">Block</string>
    <string name="client_name">Client Name</string>
    <string name="done">Done!</string>
    <string name="your_blocked_this_user">You are Blocked this user</string>
    <string name="you_are_blocked_this_user">you are blocked this user before</string>
    <string name="you_are_unbloked_this_user">you are unbloked this user</string>
    <string name="this_user_is_not_blocked">this user is not blocked before</string>
    <string name="sender_info">Sender Info</string>
    <string name="un_block">Un Block</string>
    <string name="delete">Delete</string>
    <string name="rate_provider">Rate provider</string>
    <string name="registeration_done">Regestiration done</string>
    <string name="will_used_as_user_name">(Will used as user name)</string>
    <string name="creatAccount">You are create account successfully</string>
    <string name="updateAccount">You are update account successfully</string>
    <string name="password_should">Password should contain digits and letters</string>
    <string name="enter_phone_with">Enter phone with country code</string>
    <string name="for_get_password"><u>Forget Password?</u></string>
    <string name="title_activity_change_password" translatable="false">ChangePasswordActivity</string>
    <string name="there_is_no_internet">Open network connection</string>
    <string name="loading">Loading...</string>
    <string name="ready_to_recieve">Recieve orders</string>
    <string name="sorry">Sorry!</string>
    <string name="cant_rate">You cant rate provider now</string>
    <string name="rate">Rate!</string>
    <string name="are_sure">Are you sure?</string>
    <string name="yess">Yes</string>
    <string name="noo">No</string>
    <string name="title_activity_contact_us" translatable="false">ContactUsActivity</string>
    <string name="title_activity_about" translatable="false">AboutActivity</string>
    <string name="be_in_touch">Be in touch</string>
    <string name="full_name">Full name</string>
    <string name="message_title">Message title</string>
    <string name="message">Message</string>
    <string name="reason">Reason of discard (optionaly)</string>
    <string name="Request_id">Order ID</string>
</resources>
