<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.perfect_apps.koch.activities.SignUpClientActivity"
    tools:showIn="@layout/activity_sign_up_client">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="3dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:targetApi="lollipop">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@null"
                android:src="@drawable/regi_ti_icon" />

            <TextView
                android:id="@+id/text1"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_example"
                android:textColor="@color/red" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_plus"
            android:layout_marginRight="@dimen/activity_horizontal_margin_plus"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_chevron_left_black_24dp" />

            <TextView
                android:id="@+id/text2"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/client_name" />

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textColor="@color/red" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_plus"
            android:layout_marginRight="@dimen/activity_horizontal_margin_plus"
            android:background="@drawable/border_shape_gray_with_more_radius">

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#00000000"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_plus"
            android:layout_marginRight="@dimen/activity_horizontal_margin_plus"
            android:layout_marginTop="@dimen/vertical_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_chevron_left_black_24dp" />

            <TextView
                android:id="@+id/text3"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone_number" />

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textColor="@color/red" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_plus"
            android:layout_marginRight="@dimen/activity_horizontal_margin_plus"
            android:background="@drawable/border_shape_gray_with_more_radius">

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#00000000"
                android:hint="@string/enter_phone_number"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_plus"
            android:layout_marginRight="@dimen/activity_horizontal_margin_plus"
            android:layout_marginTop="@dimen/vertical_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_chevron_left_black_24dp" />

            <TextView
                android:id="@+id/text4"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email" />

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textColor="@color/red" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_plus"
            android:layout_marginRight="@dimen/activity_horizontal_margin_plus"
            android:background="@drawable/border_shape_gray_with_more_radius">

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#00000000"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_plus"
            android:layout_marginRight="@dimen/activity_horizontal_margin_plus"
            android:layout_marginTop="@dimen/vertical_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_chevron_left_black_24dp" />

            <TextView
                android:id="@+id/text5"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password" />

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textColor="@color/red" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_plus"
            android:layout_marginRight="@dimen/activity_horizontal_margin_plus"
            android:background="@drawable/border_shape_gray_with_more_radius">

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#00000000"
                android:hint="@string/password"
                android:textAlignment="viewStart"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text=""
                tools:ignore="RtlCompat" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_plus"
            android:layout_marginRight="@dimen/activity_horizontal_margin_plus"
            android:layout_marginTop="@dimen/vertical_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_chevron_left_black_24dp" />

            <TextView
                android:id="@+id/text6"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/repeat_password" />

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textColor="@color/red" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_plus"
            android:layout_marginRight="@dimen/activity_horizontal_margin_plus"
            android:background="@drawable/border_shape_gray_with_more_radius">

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#00000000"
                android:hint="@string/enter_password_again"
                android:textAlignment="viewStart"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text=""
                tools:ignore="RtlCompat" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/pickPhoto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_plus"
            android:layout_marginRight="@dimen/activity_horizontal_margin_plus"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:background="@drawable/border_shape_gray_with_more_radius">
            <TextView
                android:id="@+id/text7"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:hint=""
                android:text="@string/upload_personal_picture"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center_vertical"/>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:contentDescription="@null"
                android:padding="1dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/regi_photo"/>
        </LinearLayout>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginLeft="?android:attr/listPreferredItemHeight"
            android:layout_marginRight="?android:attr/listPreferredItemHeight"
            android:layout_marginTop="@dimen/vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/border_shape_green_radius_button"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>
