<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eaeff5"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="none">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:background="@color/white"
                android:elevation="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                tools:targetApi="lollipop">

                <TextView
                    android:id="@+id/text1"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/be_in_touch"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_shape"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:hint="@string/full_name"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:background="#f8f8f8"
                    android:contentDescription="@null"
                    android:padding="3dp"
                    android:src="@drawable/regi_ti_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/border_shape"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="top"
                    android:hint="@string/email"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:background="#f8f8f8"
                    android:contentDescription="@null"
                    android:padding="3dp"
                    android:src="@drawable/pro_email" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/border_shape"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:background="#f8f8f8"
                    android:contentDescription="@null"
                    android:padding="3dp"
                    android:src="@drawable/pro_phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/border_shape"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:hint="@string/message_title"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:background="#f8f8f8"
                    android:contentDescription="@null"
                    android:padding="3dp"
                    android:src="@drawable/regi_ti_icon" />
            </LinearLayout>

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/border_shape"
                android:gravity="top"
                android:hint="@string/message"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:minHeight="150dp"
                android:padding="5dp"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/dark_gray" />

            <Button
                android:id="@+id/button1"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:hint="@string/send"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
